--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -13,22 +13,22 @@ phases:
     matrix:
       regular:
         TASK: regular
-      sdist:
-        TASK: sdist
-        PYTHON_VERSION: 3.5
+#      sdist:
+#        TASK: sdist
+#        PYTHON_VERSION: 3.5
       bdist:
         TASK: bdist
         PYTHON_VERSION: 3.6
-      inference:
-        TASK: if-else
-      mpi_source:
-        TASK: mpi
-        METHOD: source
-        PYTHON_VERSION: 2.7
-      gpu_source:
-        TASK: gpu
-        METHOD: source
-        PYTHON_VERSION: 3.6
+#      inference:
+#        TASK: if-else
+#      mpi_source:
+#        TASK: mpi
+#        METHOD: source
+#        PYTHON_VERSION: 2.7
+#      gpu_source:
+#        TASK: gpu
+#        METHOD: source
+#        PYTHON_VERSION: 3.6
   steps:
   - task: CondaEnvironment@0
     inputs:
@@ -51,7 +51,7 @@ phases:
   - bash: $(Build.SourcesDirectory)/.vsts-ci/test.sh
     displayName: Test
   - task: PublishBuildArtifacts@1
-    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+#    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     inputs:
       pathtoPublish: '$(Build.ArtifactStagingDirectory)'
       artifactName: PackageAssets
@@ -59,6 +59,8 @@ phases:
 ###########################################
 - phase: MacOS
 ###########################################
+  variables:
+    COMPILER: gcc
   queue:
     name: 'Hosted macOS Preview'
     parallel: 3
@@ -71,21 +73,33 @@ phases:
         PYTHON_VERSION: 3.4
       bdist:
         TASK: bdist
-        PYTHON_VERSION: 3.5
+        PYTHON_VERSION: 3.6
+      mpi_source:
+        TASK: mpi
+        METHOD: source
+        PYTHON_VERSION: 2.7
+      mpi_pip:
+        TASK: mpi
+        METHOD: pip
+        PYTHON_VERSION: 2.7
   steps:
+  - task: CondaEnvironment@0
+    inputs:
+      updateConda: true
+      environmentName: $(CONDA_ENV)
+      packageSpecs: 'python=$(PYTHON_VERSION)'
+      createOptions: '-q  --prefix $AGENT_HOMEDIRECTORY/conda'
   - script: |
-      brew install libomp
-      brew reinstall cmake
-      wget -O conda.sh https://repo.continuum.io/miniconda/Miniconda${PYTHON_VERSION:0:1}-latest-MacOSX-x86_64.sh
-      bash conda.sh -b -p $HOME/miniconda
-      export PATH=$HOME/miniconda/bin:$PATH
-      conda config --set always_yes yes --set changeps1 no
-      conda create -q -n $CONDA_ENV python=$PYTHON_VERSION
-      source activate $CONDA_ENV
-      export LGB_VER=$(head -n 1 VERSION.txt)
-      bash .vsts-ci/test.sh
+      echo "##vso[task.setvariable variable=LGB_VER]$(head -n 1 VERSION.txt)"
+      chmod +x $BUILD_SOURCESDIRECTORY/.vsts-ci/setup.sh
+      chmod +x $BUILD_SOURCESDIRECTORY/.vsts-ci/test.sh
+    displayName: 'Set variables'
+  - bash: $(Build.SourcesDirectory)/.vsts-ci/setup.sh
+    displayName: Setup
+  - bash: $(Build.SourcesDirectory)/.vsts-ci/test.sh
+    displayName: Test
   - task: PublishBuildArtifacts@1
-    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+#    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     inputs:
       pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
       artifactName: PackageAssets
@@ -100,9 +114,9 @@ phases:
       regular:
         TASK: regular
         PYTHON_VERSION: 3.5
-      sdist:
-        TASK: sdist
-        PYTHON_VERSION: 2.7
+#      sdist:
+#        TASK: sdist
+#        PYTHON_VERSION: 2.7
       bdist:
         TASK: bdist
         PYTHON_VERSION: 3.6
@@ -116,7 +130,7 @@ phases:
   - powershell: $(Build.SourcesDirectory)/.vsts-ci/test_windows.ps1
     displayName: Test
   - task: PublishBuildArtifacts@1
-    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+#    condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     inputs:
       pathtoPublish: '$(Build.ArtifactStagingDirectory)'
       artifactName: PackageAssets
@@ -129,7 +143,7 @@ phases:
   - Linux
   - MacOS
   - Windows
-  condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+#  condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
   queue:
     name: 'Hosted VS2017'
   steps:
